# human-readable-duration

./: .codeclimate.yml  .gitignore  .travis.yml  LICENSE  README.md  human-readable-duration.cabal  stack.yaml
bench/: Main.hs
src/Data/: Duration.hs
src/Data/Duration/: Tutorial.hs
test/: DocTest.hs  Spec.hs
