name:                human-readable-duration
version:             0.1.0.0
synopsis:            Provide duration helper
description:         Please see README.md
homepage:            http://github.com/yogsototh/human-readable-duration#readme
license:             BSD3
license-file:        LICENSE
author:              Yann Esposito
maintainer:          yann.esposito@gmail.com
category:            Time
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Duration
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

-- test-suite human-readable-duration-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , human-readable-duration
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yogstoth/human-readable-duration
